# Software-Rasterizer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
examples/models/cornellbox/cornellbox_full_model/: cbox.mtl  cornell_box.mtl
examples/models/cornellbox/cornellbox_parts/: 3dlight.mtl  large.mtl  left.mtl  right.mtl  small.mtl
include/: Mesh.hpp  ObjLoader.hpp  Render.hpp  Shader.hpp  Simd.hpp  TextureLoader.hpp  Tools.hpp  Triangle.hpp
include/base/: Render.hpp
include/bvh/: BVHAcceleration.hpp  Bounds3.hpp
include/hpc/: Simd.hpp
include/light/: AreaLight.hpp  Light.hpp  SphereLight.hpp
include/loader/: ObjLoader.hpp  TextureLoader.hpp
include/object/: Cube.hpp  Material.hpp  Mesh.hpp  Object.hpp  Sphere.hpp  Triangle.hpp
include/ray/: Intersection.hpp  Ray.hpp
include/render/: PathTracing.hpp  Rasterizer.hpp  RayTracing.hpp  Render.hpp
include/scene/: Scene.hpp
include/service/: LockFree.hpp  Noncopyable.hpp  Singleton.hpp  ThreadPool.hpp
include/shader/: Shader.hpp
src/: AreaLight.cpp  BVHAcceleration.cpp  Bounds3.cpp  Cube.cpp  Material.cpp  Mesh.cpp  ObjLoader.cpp  Object.cpp  PathTracing.cpp  Rasterizer.cpp  RayTracing.cpp  Render.cpp  Scene.cpp  Shader.cpp  Sphere.cpp  SphereLight.cpp  TextureLoader.cpp  ThreadPool.cpp  Tools.cpp  Triangle.cpp  main.cpp
